# Deppis

./: .gitignore  .gitleaks.toml  .roborev.toml  .scala-steward.conf  .scalafmt.conf  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CRYPTO_PROOF.md  README.md  build.sbt  package-lock.json  package.json
.claude/plans/: lovely-sauteeing-clarke.md
.github/: dependabot.yml
.github/workflows/: ci.yml  scala-steward.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
clients/flutter/: README.md  pubspec.yaml
clients/flutter/assets/: protocol-engine.bundle.js  rng-pool.js
clients/flutter/ios/Runner/: Info.plist
clients/flutter/ios/Runner.xcodeproj/: project.pbxproj
clients/flutter/lib/: main.dart
clients/flutter/lib/engine/: dev_engine.dart  engine_factory.dart  engine_factory_io.dart  engine_factory_web.dart  protocol_engine.dart  scalajs_engine.dart
clients/flutter/lib/state/: app_state.dart
clients/flutter/lib/ui/: add_buddy_screen.dart  conversation_screen.dart  home_screen.dart  privacy_banner.dart
clients/flutter/test/: app_state_test.dart  dev_engine_test.dart  scalajs_engine_test.dart  widget_test.dart
clients/flutter/web/: index.html  manifest.json
crypto/: build-liboqs.sh
deploy/enclave/: Dockerfile  README.md  measurement.txt  obsd.manifest.template  reproduce.sh
deploy/envoy/: envoy.yaml
deploy/grpc-web/: .gitignore  Dockerfile.server  README.md  client.js  compose.yaml  run.sh
oblivious-sidecar/: Cargo.toml  build.rs
oblivious-sidecar/proto/: store.proto
oblivious-sidecar/src/: grpc.rs  grpc_notify.rs  lib.rs  notify.rs  portable_sort.rs  primitives.rs  store.rs
oblivious-sidecar/tests/: notify.rs  notify_grpc.rs  primitives.rs  store.rs  store_grpc.rs
project/: V.scala  plugins.sbt
protocol-core-js/: build-jsc-bundle.sh
protocol-core-js/e2e/: engine-jsc.cjs  rng-pool.cjs
protocol-core/js/e2e/: engine-contract.cjs
scripts/: build-web-bundle.sh  run-demo.sh
specs/001-metadata-private-messenger/: data-model.md  future-work.md  plan.md  privacy-guarantees.md  quickstart.md  research.md  spec.md  tasks.md  threat-model.md
specs/001-metadata-private-messenger/checklists/: requirements.md
specs/001-metadata-private-messenger/contracts/: cli-contracts.md  engine-api.md  messaging.proto  store.proto
specs/001-metadata-private-messenger/design/: attestation-key-provisioning.md  continuous-pq-ratchet-review.md  continuous-pq-ratchet.md  dcap-attestation.md  dh-ratchet.md  grpc-web-transport.md  hardware-crypto-acceleration.md  notify-bit-lease.md  retry-safe-addressing.md
transport/src/main/protobuf/: attestation.proto  (+2 more)
(+163 files in other folders)
