[package]
name = "oblivious-sidecar"
version = "0.1.0"
edition = "2021"
description = "Constant-time oblivious primitives + gRPC PONG store / PING aggregation (dev; the privacy claim requires the SGX enclave)."

# Pinned (Constitution XI). subtle is a vetted constant-time primitives library — Constitution I
# (no hand-rolled constant-time code). tonic/prost/tokio provide the gRPC sidecar server.
[dependencies]
subtle = "=2.6.1"
tonic = "=0.12.3"
prost = "=0.13.4"
tokio = { version = "=1.42.0", features = ["rt-multi-thread", "macros", "net"] }

[build-dependencies]
tonic-build = "=0.12.3"

[dev-dependencies]
proptest = "=1.11.0"

[lib]
name = "oblivious_sidecar"
path = "src/lib.rs"

[[bin]]
name = "obsx"
path = "src/bin/obsx.rs"

[[bin]]
name = "obsd"
path = "src/bin/obsd.rs"
